# malaria-predict-mono

./: .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  README_SIMPLE.md  REORGANIZATION_SUMMARY.md  docker-compose.yaml  docker-compose.yml  env.example  pytest.ini  requirements.txt  test_backend.py
.github/workflows/: ci.yml
backend/: Dockerfile  Makefile  README.md  README_BACKEND.md  ml_integration.py  pyproject.toml  requirements.txt  test_api.py
backend/api/: endpoints.py  main.py  models.py  routes.py
backend/infrastructure/: database_manager.py  email_alerts.py  worker.py
backend/ml/: __init__.py
backend/ml/models/: __init__.py  predictor.py  trainer.py
backend/tests/: conftest.py  run_tests.py  test_alerts.py  test_api.py  test_api_models.py  test_feature_engineering.py  test_model_trainer.py
backend/tests/unit/: test_domain_entities.py
data/raw/: .gitkeep
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  INSTALLATION.md  USER_GUIDE.md
frontend/: .eslintrc.json  Dockerfile  Makefile  README.md  next.config.js  package-lock.json  package.json
frontend/web/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
infra/compose/: docker-compose.yaml
infra/docker/: Dockerfile.api  Dockerfile.dashboard
ml/: Dockerfile  FINAL_ORGANIZATION_REPORT.md  ML_SUMMARY.md  Makefile  ORGANIZATION_SUMMARY.md  README.md  REAL_MODEL_REPORT.md  cleanup.py  generate_sample_data.py  metrics_report.py  pyproject.toml  requirements.txt  test_real_model.py  train_real_model.py
ml/core/data/data_sources/: fetch_climate_open_meteo.py
ml/core/data/data_sources/reports/: download_reports.py  parse_reports.py
ml/core/models/: label_encoder_municipio_expanded.pkl  label_encoder_risco_expanded.pkl
ml/core/training/: train_expanded_model.py
ml/data/: __init__.py
ml/data_sources/reports/: parse_reports.py  urls.txt
ml/docs/: EXPANDED_DATASET_REPORT.md  README_REAL_MODEL.md
ml/features/: __init__.py  feature_engineering.py
ml/models/: __init__.py  label_encoder_municipio.pkl  malaria_model.py  malaria_risk_model_real.pkl  test_model.joblib  trainer.py
ml/scripts/: compare_models.py  demo_model_usage.py  generate_large_dataset.py  test_ml_module.py
ml/serving/: __init__.py
ml/training/: __init__.py
scripts/: check_structure.py  check_system.py  quick_start.sh  run_tests.py  setup.sh  setup_database.py  start.sh  stop.sh  test.sh  train_model.py
sql/: 01_create_tables.sql  02_sample_data.sql
src/alerts/: __init__.py  email_sender.py
src/api/: __init__.py  main.py  models.py  routes.py
src/dashboards/: __init__.py  package.json  tailwind.config.js
tests/: conftest.py  test_data_loader.py  test_feature_engineering.py  test_malaria_model.py
(+12 files in other folders)
