[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malaria-ml"
version = "1.0.0"
description = "Machine Learning para Sistema de Previsão de Risco de Malária - Bié"
authors = [
    {name = "Edgar Tchissingui", email = "edgar@malaria-bie.ao"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.3.2",
    "pandas>=2.1.4",
    "numpy>=1.25.2",
    "joblib>=1.3.2",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "feature-engine>=1.6.2",
    "category-encoders>=2.6.3",
    "mlxtend>=0.22.0",
    "imbalanced-learn>=0.11.0",
    "optuna>=3.4.0",
    "hyperopt>=0.2.7",
    "great-expectations>=0.18.5",
    "pandera>=0.17.2",
    "mlflow>=2.8.1",
    "dvc>=3.15.0",
    "tqdm>=4.66.1",
    "click>=8.1.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
